@@ -1,33 +1,34 @@
-name := "Mellite"
+name          := "Mellite"
 
-version := "0.3.0"
+version       := "0.3.1-SNAPSHOT"
 
-organization := "de.sciss"
+organization  := "de.sciss"
 
-homepage <<= name { n => Some(url("https://github.com/Sciss/" + n)) }
+homepage      := Some(url(s"https://github.com/Sciss/${name.value}"))
 
-description := "An application based on SoundProcesses"
+description   := "An application based on SoundProcesses"
 
-licenses := Seq("GPL v2+" -> url("http://www.gnu.org/licenses/gpl-2.0.txt"))
+licenses      := Seq("GPL v2+" -> url("http://www.gnu.org/licenses/gpl-2.0.txt"))
 
-scalaVersion := "2.10.2"
+scalaVersion  := "2.10.5"
 
 libraryDependencies ++= Seq(
-  "de.sciss" %% "soundprocesses"     % "1.9.+",
-  "de.sciss" %% "scalacolliderswing" % "1.9.1+",  // AudioBusMeter in 1.9.1
-  "de.sciss" %% "lucrestm-bdb"       % "2.0.+",
-  "de.sciss" %% "desktop"            % "0.3.3+",
-  "de.sciss" %% "swingplus"          % "0.0.1+",
-  "de.sciss" %% "audiowidgets-app"   % "1.3.+",
-  "de.sciss" %% "sonogramoverview"   % "1.6.2+",  // bug in 1.6.1
-  "de.sciss" %% "serial"             % "1.0.1+",  // bug in 1.0.0
-  "de.sciss" %% "treetable-scala"    % "1.3.1+",
-  "de.sciss" %% "fscapejobs"         % "1.4.+",
-  "de.sciss" %% "strugatzki"         % "2.1.+",
-  "de.sciss" %% "fileutil"           % "1.0.+"
+  "de.sciss" %% "soundprocesses"     % "1.9.1",
+  "de.sciss" %% "scalacolliderswing" % "1.9.1",  // AudioBusMeter in 1.9.1
+  "de.sciss" %% "lucrestm-bdb"       % "2.0.4",
+  "de.sciss" %% "desktop"            % "0.3.4",
+  "de.sciss" %% "swingplus"          % "0.0.2",
+  "de.sciss" %% "audiowidgets-app"   % "1.3.1",
+  "de.sciss" %% "sonogramoverview"   % "1.6.2",  // bug in 1.6.1
+  "de.sciss" %% "serial"             % "1.0.2",  // bug in 1.0.0
+  "de.sciss" %% "treetable-scala"    % "1.3.8",
+  "de.sciss" %% "fscapejobs"         % "1.4.1",
+  "de.sciss" %% "strugatzki"         % "2.1.0",
+  "de.sciss" %% "fileutil"           % "1.0.0",
+  "de.sciss" %  "weblaf"             % "1.28"
 )
 
-retrieveManaged := true
+// retrieveManaged := true
 
 scalacOptions ++= Seq("-deprecation", "-unchecked", "-feature")
 
@@ -40,23 +41,3 @@ initialCommands in console :=
     |import de.sciss.indeterminus._""".stripMargin
 
 fork in run := true  // required for shutdown hook, and also the scheduled thread pool, it seems
-
-// ---- packaging ----
-
-seq(appbundle.settings: _*)
-
-appbundle.icon := Some(file("icons") / "application.png")
-
-appbundle.target <<= baseDirectory
-
-appbundle.signature := "Ttm "
-
-appbundle.javaOptions ++= Seq("-XX:+CMSClassUnloadingEnabled", "-XX:+UseConcMarkSweepGC", "-XX:MaxPermSize=128m")
-
-appbundle.documents += appbundle.Document(
-  name       = "Mellite Document",
-  role       = appbundle.Document.Editor,
-  icon       = Some(file("icons") / "document.png"),
-  extensions = Seq("mllt"),
-  isPackage  = true
-)
